Next line is randomly chosen